banner section completed

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                   colors: {
                     clifford: '#da373d',
                     'btn-color': '#ABEF5F',
+                    'title-color': '#212121',
                   }
                 }
               }
@@ -44,9 +45,9 @@
       <header class="container w-5/6 mx-auto back-color" >
           <!-- navigation bar  -->
            <nav>
-            <div class="navbar bg-base-100">
+            <div class="navbar bg-base-100 my-5 md:my-8">
                 <div class="navbar-start">
-                  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #abef5f; --fa-rotate-angle: 45deg;""></i>
+                  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i>
                   <a class="btn btn-ghost font-bold text-3xl">Rinterio</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
@@ -94,6 +95,22 @@
                 </div>
               </div>
            </nav>
+
+           <!-- banner section start here  -->
+          <section>
+            <div class="hero min-h-screen w-full ">
+              <div class="hero-content text-center">
+                <div class="flex flex-col items-center justify-center md:px-10 ">
+                  <img src="assets/banner.png" alt="">
+                  <h1 class="md:text-5xl text-2xl font-extrabold mt-10 title-color ">A barn house of this design has a striking appearance</h1>
+                  <p class="py-6 text-sm text-[#494949]">
+                    The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
+                  </p>
+                  <button class="btn btn-primary bg-[#b9fc6ddc] border-none rounded-full text-black px-5">View Details <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #84e01a; --fa-rotate-angle: 45deg;"></i></button>
+                </div>
+              </div>
+            </div>
+          </section>
       </header>
       <main>
 
