banner and nav section responsive done

--- a/index.html
+++ b/index.html
@@ -98,15 +98,17 @@
 
            <!-- banner section start here  -->
           <section>
-            <div class="hero min-h-screen w-full ">
+            <div class="hero w-full ">
               <div class="hero-content text-center">
-                <div class="flex flex-col items-center justify-center md:px-10 ">
+                <div class="flex flex-col items-center justify-center">
                   <img src="assets/banner.png" alt="">
-                  <h1 class="md:text-5xl text-2xl font-extrabold mt-10 title-color ">A barn house of this design has a striking appearance</h1>
+                  <div class="lg:w-3/4 mx-auto">
+                    <h1 class="md:text-5xl text-2xl font-extrabold mt-10 title-color ">A barn house of this design has a striking appearance</h1>
                   <p class="py-6 text-sm text-[#494949]">
                     The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
                   </p>
-                  <button class="btn btn-primary bg-[#b9fc6ddc] border-none rounded-full text-black px-5">View Details <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #84e01a; --fa-rotate-angle: 45deg;"></i></button>
+                  </div>
+                  <button class="btn btn-primary bg-[#b9fc6ddc] border-none rounded-full text-black w-full md:w-auto px-5">View Details <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #84e01a; --fa-rotate-angle: 45deg;"></i></button>
                 </div>
               </div>
             </div>
