--- a/index.html
+++ b/index.html
@@ -119,24 +119,24 @@
       <!-- section design thoughtful start here -->
        <section>
         <div class="hero bg-base-200 py-24">
-          <div class="hero-content grid grid-cols-1 lg:grid-cols-2 w-5/6 mx-auto space-x-8 relative md:w-full">  
-          <img class="absolute -top-4 hidden lg:block" src="assets/Vector.png" alt="">
+          <div class="hero-content grid grid-cols-1 lg:grid-cols-2 md:space-x-8 relative md:w-full mx-auto">  
+          <img class="absolute -top-8 hidden lg:block" src="assets/Vector.png" alt="">
             <div class="space-y-6">
-              <div class="space-y-6 md:text-center lg:text-start">
+              <div class="space-y-6 text-center lg:text-start">
                 <button class=" btn btn-neutral bg-white border-none rounded-full text-gray-800 font-semibold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>About Us</button>
-              <h3 class="title-color font-extrabold text-5xl">We design thoughtful, liveable spaces</h3>
+              <h3 class="title-color font-extrabold text-3xl md:text-5xl">We design thoughtful, liveable spaces</h3>
               <p class="text-[#494949] font-bold text-md">The barn house captivates with its blend of rustic charm and 
                 modern sophistication, featuring weathered wood, sleek metal accents.</p>
               </div>
-                <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-1 gap-6">
-                  <div class="flex p-6 lg:p-8 md:space-x-2 lg:space-x-6 bg-white border-none rounded-2xl">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 gap-6">
+                  <div class="flex p-6 lg:p-8 space-x-2 lg:space-x-6 bg-white border-none rounded-2xl">
                   <img src="assets/commercial.png" alt="">
                   <div class="text-[#494949]">
                     <h6 class="text-[#494949] font-bold text-xl">Commercial</h6>
                     <p class="text-sm mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
                   </div>
                 </div>
-                <div class="flex p-6 lg:p-8 md:space-x-2 lg:space-x-6 bg-white border-none rounded-2xl">
+                <div class="flex p-6 lg:p-8 space-x-2 lg:space-x-6 bg-white border-none rounded-2xl">
                   <img  src="assets/residential.png" alt="">
                   <div class="text-[#494949]">
                     <h6 class="text-[#494949] font-bold text-xl">Residential</h6>
