small card section completed with responsiveness

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     clifford: '#da373d',
                     'btn-color': '#ABEF5F',
                     'title-color': '#212121',
+                    'paragraph-color': '#494949',
                   }
                 }
               }
@@ -150,6 +151,56 @@
           </div>
         </div>
        </section>
+
+       <!-- small card section start  here -->
+        <section class="lg:py-8 bg-[rgb(243,243,243)]">
+           <div class="bg-white w-4/5 mx-auto py-6 border-none rounded-3xl grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+            
+            <!-- card-1 -->
+            <div class="card bg-white w-auto mx-auto p-6 rounded-none">
+              <figure class=" ">
+                <img src="assets/message-regular.svg" alt="">
+              </figure>
+              <div class="card-body items-center text-center -mt-4">
+                <h2 class="card-title paragraph-color text-3xl font-extrabold paragraph-color">235+</h2>
+                <p class="paragraph-color text-sm font-semibold opacity-90">Happy Client Review</p>
+              </div>
+            </div>
+
+            <!-- card-2 -->
+            <div class="card bg-white w-auto mx-auto p-6 rounded-none">
+              <figure class=" ">
+                <img src="assets/building-user-solid.svg" alt="">
+              </figure>
+              <div class="card-body items-center text-center -mt-4">
+                <h2 class="card-title paragraph-color text-3xl font-extrabold paragraph-color">50+</h2>
+                <p class="paragraph-color text-sm font-semibold opacity-90">Work Departments</p>
+              </div>
+            </div>
+
+            <!-- card-3 -->
+            <div class="card bg-white w-auto mx-auto p-6 rounded-none">
+              <figure class=" ">
+                <img src="assets/people-group-solid.svg" alt="">
+              </figure>
+              <div class="card-body items-center text-center -mt-4">
+                <h2 class="card-title paragraph-color text-3xl font-extrabold paragraph-color">30K+</h2>
+                <p class="paragraph-color text-sm font-semibold opacity-90">Our Happy Client</p>
+              </div>
+            </div>
+
+            <!-- card-1 -->
+            <div class="card bg-white w-auto mx-auto p-6 rounded-none">
+              <figure class=" ">
+                <img src="assets/user-large-solid.svg" alt="">
+              </figure>
+              <div class="card-body items-center text-center -mt-4">
+                <h2 class="card-title paragraph-color text-3xl font-extrabold paragraph-color">700+</h2>
+                <p class="paragraph-color text-sm font-semibold opacity-90">Staff Members</p>
+              </div>
+            </div>
+           </div>
+        </section>
       </main>
       <footer>
 
