--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     'btn-color': '#ABEF5F',
                     'title-color': '#212121',
                     'paragraph-color': '#494949',
+                    'box-1-color': '#E7C1D3',
+                    'box-2-color': '#EFDA6E',
+                    'box-3-color': '#A4DAC3',
+                    'box-4-color': '#77AAEA',
                     'section-color': 'rgb(243,243,243)',
                   }
                 }
@@ -119,8 +123,8 @@
       <main>
 
       <!-- section design thoughtful start here -->
-       <section class="">
-        <div class="hero bg-base-200 py-24">
+       <section class="bg-base-200 ">
+        <div class=" container mx-auto hero bg-base-200 py-24">
           <div class="hero-content grid grid-cols-1 lg:grid-cols-2 relative w-full mx-auto">  
           <img class="absolute -top-8 hidden lg:block" src="assets/Vector.png" alt="">
             <div class="space-y-6">
@@ -155,7 +159,7 @@
 
        <!-- small card section start  here -->
         <section class="lg:py-8 bg-section-color">
-           <div class="w-4/5 container bg-white mx-auto py-6 border-none rounded-3xl grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+           <div class="lg:w-4/5 w-4/5 md:w-11/12 container bg-white mx-auto py-6 border-none rounded-3xl grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
             
             <!-- card-1 -->
             <div class="card w-auto mx-auto p-6 rounded-none">
@@ -207,10 +211,40 @@
         <!-- work process section start here -->
          <section class=" mx-auto lg:py-8 bg-section-color">
           <!-- workpress section -->
-            <div class=" container w-4/5 lg:w-1/2 mx-auto  pt-6 text-center space-y-4">
+            <div class=" container w-4/5 lg:w-1/2 mx-auto  pt-12 text-center space-y-4">
               <button class=" btn btn-neutral bg-white border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>How we works</button>
               <h3 class="text-4xl font-extrabold text-title-color ">Our Works Process</h3>
               <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-4/5 pt-6"> 
+              
+              <!-- card-1 -->
+               <div class="bg-box-1-color p-6 border-none rounded-2xl space-y-1 py-14">
+                <img src="assets/concept.png" alt="">
+                <h5 class="text-2xl font-bold">Concept</h5>
+                <p class="text-lg opacity-95 font-bold text-paragraph-color">The barn house captivates with its blend of rustic charm and modern.</p>
+               </div>
+
+              <!-- card-2-->
+               <div class="bg-box-2-color p-6 border-none rounded-2xl space-y-1 py-14">
+                <img src="assets/flow-chart.png" alt="">
+                <h5 class="text-2xl font-bold">Design Process</h5>
+                <p class="text-lg opacity-95 font-bold text-paragraph-color">The barn house captivates with its blend of rustic charm and modern.</p>
+               </div>
+
+              <!-- card-3 -->
+               <div class="bg-box-3-color p-6 border-none rounded-2xl space-y-1 py-14">
+                <img src="assets/vision.png" alt="">
+                <h5 class="text-2xl font-bold">Supervision</h5>
+                <p class="text-lg opacity-95 font-bold text-paragraph-color">The barn house captivates with its blend of rustic charm and modern.</p>
+               </div>
+
+              <!-- card-4 -->
+               <div class="bg-box-4-color p-6 border-none rounded-2xl space-y-1 py-14">
+                <img src="assets/budget-planning.png" alt="">
+                <h5 class="text-2xl font-bold">Budget Planning</h5>
+                <p class="text-lg opacity-95 font-bold text-paragraph-color">The barn house captivates with its blend of rustic charm and modern.</p>
+               </div>
             </div>
          </section>
       </main>
