--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
       <!-- section design thoughtful start here -->
        <section class="bg-base-200 ">
-        <div class=" container mx-auto hero bg-base-200 py-24">
+        <div class=" container md:w-5/6 mx-auto hero bg-base-200 py-24">
           <div class="hero-content grid grid-cols-1 lg:grid-cols-2 relative w-full mx-auto">  
           <img class="absolute -top-8 hidden lg:block" src="assets/Vector.png" alt="">
             <div class="space-y-6">
@@ -247,6 +247,26 @@
                </div>
             </div>
          </section>
+
+         <!-- latest portfolio section start from here  -->
+
+         <section class="container w-4/5 lg:w-1/2 mx-auto">
+          <div class="  pt-12 text-center space-y-4">
+            <button class=" btn btn-neutral bg-white border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>How we works</button>
+            <h3 class="text-4xl font-extrabold text-title-color ">Our Works Process</h3>
+            <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          </div>
+        </section>
+
+
+         <!-- article and news section start here  -->
+          <section class="   bg-section-color">
+            <div class="container w-4/5 lg:w-1/2 mx-auto  pt-20 text-center space-y-4">
+              <button class=" btn btn-neutral bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Rinterio News</button>
+              <h3 class="text-4xl font-extrabold text-title-color ">Read Our Articles and News</h3>
+              <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+          </section>
       </main>
       <footer>
 
