article section completed with responsiveness

--- a/index.html
+++ b/index.html
@@ -261,11 +261,72 @@
 
          <!-- article and news section start here  -->
           <section class="   bg-section-color">
-            <div class="container w-4/5 lg:w-1/2 mx-auto  pt-20 text-center space-y-4">
+            <div class="container w-4/5 lg:w-1/2 mx-auto  pt-20 text-center space-y-4 pb-8">
               <button class=" btn btn-neutral bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Rinterio News</button>
               <h3 class="text-4xl font-extrabold text-title-color ">Read Our Articles and News</h3>
               <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
+
+            <!-- box -->
+             <div class="container  w-11/12 lg:w-5/6 mx-auto grid grid-cols-1 lg:grid-cols-3 gap-8 lg:gap-12">
+              
+               <!-- box-1 -->
+               <div class="card bg-base-100 shadow-xl grid md:grid-cols-2 lg:grid-cols-1">
+                <figure class="px-6 pt-6">
+                  <img
+                    src="assets/article1.png"
+                    alt="article"
+                    class="rounded-xl  lg:size-full" />
+                </figure>
+                <div class="card-body items-start text-start space-y-2 ">
+                  <div class="flex space-x-4">
+                    <p class="text-paragraph-color opacity-95"> <i class="fa-regular fa-calendar-days fa-lg pr-1" style="color: #737373;"></i> July14, 2024</p>
+                    <p class="text-paragraph-color opacity-95"><i class="fa-regular fa-user fa-lg pr-1" style="color: #737373;"></i>  By Admin</p>
+                  </div>
+                  <h3 class="font-bold text-paragraph-color text-xl">How to choose the furniture right  of your home.</h3>
+                  <p class=" text-paragraph-color opacity-95 text-md">The barn house captivates with its blend of rustic charm and modern. </p>
+                  <span class="font-extrabold text-xl text-title-color">Read More  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i></span>
+                </div>
+              </div>
+
+               <!-- box-2 -->
+               <div class="card bg-base-100 shadow-xl grid md:grid-cols-2 lg:grid-cols-1">
+                <figure class="px-6 pt-6">
+                  <img
+                    src="assets/article2.png"
+                    alt="article"
+                    class="rounded-xl lg:size-full" />
+                </figure>
+                <div class="card-body items-start text-start space-y-2">
+                  <div class="flex space-x-4">
+                    <p class="text-paragraph-color opacity-95"> <i class="fa-regular fa-calendar-days fa-lg pr-1" style="color: #737373;"></i> July14, 2024</p>
+                    <p class="text-paragraph-color opacity-95"><i class="fa-regular fa-user fa-lg pr-1" style="color: #737373;"></i>  By Admin</p>
+                  </div>
+                  <h3 class="font-bold text-paragraph-color text-xl">How to choose the furniture right  of your home.</h3>
+                  <p class=" text-paragraph-color opacity-95 text-md">The barn house captivates with its blend of rustic charm and modern. </p>
+                  <span class="font-extrabold text-xl text-title-color">Read More  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i></span>
+                </div>
+              </div>
+
+               <!-- box-3 -->
+               <div class="card bg-base-100 shadow-xl grid md:grid-cols-2 lg:grid-cols-1">
+                <figure class="px-6 pt-6">
+                  <img
+                    src="assets/article3.png"
+                    alt="article"
+                    class="rounded-xl lg:size-full" />
+                </figure>
+                <div class="card-body items-start text-start space-y-2">
+                  <div class="flex space-x-4">
+                    <p class="text-paragraph-color opacity-95"> <i class="fa-regular fa-calendar-days fa-lg pr-1" style="color: #737373;"></i> July14, 2024</p>
+                    <p class="text-paragraph-color opacity-95"><i class="fa-regular fa-user fa-lg pr-1" style="color: #737373;"></i>  By Admin</p>
+                  </div>
+                  <h3 class="font-bold text-paragraph-color text-xl">How to choose the furniture right  of your home.</h3>
+                  <p class=" text-paragraph-color opacity-95 text-md">The barn house captivates with its blend of rustic charm and modern. </p>
+                  <span class="font-extrabold text-xl text-title-color">Read More  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i></span>
+                </div>
+              </div>
+             </div>
           </section>
       </main>
       <footer>
