footer section completed

--- a/index.html
+++ b/index.html
@@ -351,8 +351,25 @@
           </div>
            </section>
       </main>
-      <footer>
 
+
+
+
+  <!-- footer section start here  -->
+      <footer class="footer footer-center bg-black text-base-content rounded p-10">
+        <div class="flex">
+          <a class="btn btn-ghost font-bold text-3xl text-white"><i class="fa-solid fa-circle-arrow-up fa-rotate-by " style="color: #abef5f; --fa-rotate-angle: 45deg;"></i>Rinterio</a>
+        </div>
+        <p class="text-paragraph-color font-semibold -mt-4 w-4/5 lg:w-1/2 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        <div class="grid grid-cols-1 md:grid-cols-5 gap-6 text-gray-500 text">
+          <a class="link link-hover">Home</a>
+          <a class="link link-hover">Services</a>
+          <a class="link link-hover">Portfolio</a>
+          <a class="link link-hover">Blogs</a>
+          <a class="link link-hover">Contact US</a>
+        </div>
+        <a class="btn bg-btn-color font-bold border-none w-full md:w-auto rounded-full text-center flex py-3">Book Consult <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #000000; --fa-rotate-angle: 45deg;"></i></a>
+                  
       </footer>
 </body>
 </html>
