portfolio section content done

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             .back-color{
               background: linear-gradient(0.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
             }
+            .starlabel input:after {
+              content:" *";
+              color: red;
+}
           </style>
 
            <!-- font-awsome -->
@@ -251,10 +255,10 @@
 
          <!-- latest portfolio section start from here  -->
 
-         <section class="container w-4/5 lg:w-1/2 mx-auto">
+         <section class="container w-4/5 lg:w-1/2 mx-auto my-20">
           <div class="  pt-12 text-center space-y-4">
-            <button class=" btn btn-neutral bg-white border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>How we works</button>
-            <h3 class="text-4xl font-extrabold text-title-color ">Our Works Process</h3>
+            <button class=" btn btn-neutral bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Explore our Latest works</button>
+            <h3 class="text-4xl font-extrabold text-title-color ">Our Latest Portfolio</h3>
             <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
           </div>
         </section>
@@ -331,7 +335,7 @@
           </section>
 
           <!-- lets discuss section staart from here -->
-           <section class="mt-6" >
+           <section class="my-4" >
             <div class="pt-20 pb-8" style="background-image:url(assets/bg.jpg); background-repeat: no-repeat; background-size: cover;">
             <div class="container w-4/5 lg:w-1/2 mx-auto  text-center space-y-4 ">
               <button class=" btn btn-neutral bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Let’s Connect</button>
@@ -340,10 +344,10 @@
             </div>
             <div class="container w-4/5 lg:w-4/6 m-auto mt-8">
                <div class="grid grid-cols-1 md:grid-cols-2 grid-rows-7 gap-6">
-                  <input type="text" required class="required:border-red-500 border-none rounded-full p-5" placeholder="First Name"/>
-                  <input type="text" class="required:border-red-500 border-none rounded-full p-5" placeholder="Last Name"/>
-                  <input type="text" class="required:border-red-500 border-none rounded-full p-5" placeholder="Phone number"/>
-                  <input type="text" class="required:border-red-500 border-none rounded-full p-5" placeholder="Email Address"/>
+                  <input type="text" required class="required:border-red-500 border-none rounded-full p-5" placeholder="First Name*"/>
+                  <input type="text" class="required:border-red-500 border-none rounded-full p-5" placeholder="Last Name*"/>
+                  <input type="text" class="required:border-red-500 border-none rounded-full p-5" placeholder="Phone number*"/>
+                  <input type="text" class="required:border-red-500 border-none rounded-full p-5" placeholder="Email Address*"/>
                   <textarea name="" class="required:border-red-500 border-none rounded-3xl p-5 md:col-span-2 row-span-3" id="" placeholder="Write your message here"></textarea>
                   <a class="btn bg-btn-color font-bold border-none rounded-full p-5 md:col-span-2 text-center">Send Mail <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #000000; --fa-rotate-angle: 45deg;"></i></a>
                </div>
