--- a/index.html
+++ b/index.html
@@ -255,13 +255,47 @@
 
          <!-- latest portfolio section start from here  -->
 
-         <section class="container w-4/5 lg:w-1/2 mx-auto my-20">
-          <div class="  pt-12 text-center space-y-4">
+         <section class="container w-5/6 mx-auto my-20">
+          <div class="w-4/5 lg:w-1/2 mx-auto pt-12 text-center space-y-4">
             <button class=" btn btn-neutral bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Explore our Latest works</button>
             <h3 class="text-4xl font-extrabold text-title-color ">Our Latest Portfolio</h3>
             <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
           </div>
+
+          <div class="grid grid-cols-10 grid-rows-2 gap-8 mt-8">
+            <!-- card-1 -->
+            <div class="border-2 rounded-3xl p-6 col-span-7 flex space-x-6 items-center">
+               <img class="rounded-3xl" src="assets/img1.png" alt="">
+               <div class="">
+                <h5 class="text-2xl text-paragraph-color font-extrabold mb-6">Commercial</h5>
+                <p class="text-lg opacity-95 font-bold text-paragraph-color mb-6 mt-6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                <span class="font-extrabold text-lg text-title-color">View Details  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #8de725; --fa-rotate-angle: 45deg;"></i></span>
+              </div>
+            </div>
+            <!-- card-2 -->
+            <div class="border-2 rounded-3xl col-span-3 p-6 items-center">
+              <img class="rounded-3xl size-full" src="assets/img2.png" alt="">
+            </div>
+            <!-- card-3 -->
+            <div class="border-2 rounded-3xl p-6 items-center col-span-2">
+              <img class="rounded-3xl size-full" src="assets/img3.png" alt="">
+            </div>
+            <!-- card-4 -->
+            <div class=" border-2 col-span-6 flex space-x-6 items-center rounded-3xl p-6">
+              <img class="rounded-3xl" src="assets/img4.png" alt="">
+              <div class="">
+               <h5 class="text-2xl text-paragraph-color font-extrabold mb-6">Commercial</h5>
+               <p class="text-lg opacity-95 font-bold text-paragraph-color mb-6 mt-6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+               <span class="font-extrabold text-lg text-title-color">View Details  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #8de725; --fa-rotate-angle: 45deg;"></i></span> 
+            </div>
+          </div>
+            <!-- card-5 -->
+            <div class="border-2 rounded-3xl p-6 items-center col-span-2">
+              <img class="rounded-3xl size-full" src="assets/img5.png" alt="">
+            </div>
+          </div>
         </section>
+
 
 
          <!-- article and news section start here  -->
