--- a/index.html
+++ b/index.html
@@ -262,36 +262,40 @@
             <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
           </div>
 
-          <div class="grid grid-cols-10 grid-rows-2 gap-8 mt-8">
+          <div class="grid  md:grid-cols-2 lg:grid-cols-10 md:grid-rows-2 gap-8 mt-8">
             <!-- card-1 -->
-            <div class="border-2 rounded-3xl p-6 col-span-7 flex space-x-6 items-center">
+            <div class="border-2 rounded-3xl p-6 md:col-span-2 lg:col-span-7 flex space-x-6 items-center">
                <img class="rounded-3xl" src="assets/img1.png" alt="">
                <div class="">
-                <h5 class="text-2xl text-paragraph-color font-extrabold mb-6">Commercial</h5>
-                <p class="text-lg opacity-95 font-bold text-paragraph-color mb-6 mt-6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                <h5 class="text-2xl text-paragraph-color font-extrabold lg:mb-6 mb-4">Commercial</h5>
+                <p class="text-lg opacity-95 font-bold text-paragraph-color mb-4 lg:mb-6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
                 <span class="font-extrabold text-lg text-title-color">View Details  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #8de725; --fa-rotate-angle: 45deg;"></i></span>
               </div>
             </div>
             <!-- card-2 -->
-            <div class="border-2 rounded-3xl col-span-3 p-6 items-center">
-              <img class="rounded-3xl size-full" src="assets/img2.png" alt="">
+            <div class="border-2 rounded-3xl lg:col-span-3  col-spam-1 p-6 items-center">
+              <img class="rounded-3xl md:object-cover size-full" src="assets/img2.png" alt="">
             </div>
             <!-- card-3 -->
-            <div class="border-2 rounded-3xl p-6 items-center col-span-2">
+            <div class="border-2 rounded-3xl p-6 items-center col-span-1 lg:col-span-2">
               <img class="rounded-3xl size-full" src="assets/img3.png" alt="">
             </div>
             <!-- card-4 -->
-            <div class=" border-2 col-span-6 flex space-x-6 items-center rounded-3xl p-6">
+            <div class=" border-2 md:col-span-2 lg:col-span-6 flex space-x-6 items-center rounded-3xl p-6">
               <img class="rounded-3xl" src="assets/img4.png" alt="">
               <div class="">
-               <h5 class="text-2xl text-paragraph-color font-extrabold mb-6">Commercial</h5>
-               <p class="text-lg opacity-95 font-bold text-paragraph-color mb-6 mt-6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+               <h5 class="text-2xl text-paragraph-color font-extrabold lg:mb-6 mb-4">Commercial</h5>
+               <p class="text-lg opacity-95 font-bold text-paragraph-color mb-4 lg:mb-6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
                <span class="font-extrabold text-lg text-title-color">View Details  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #8de725; --fa-rotate-angle: 45deg;"></i></span> 
             </div>
           </div>
             <!-- card-5 -->
-            <div class="border-2 rounded-3xl p-6 items-center col-span-2">
+            <div class="border-2 rounded-3xl p-6 items-center col-span-1 lg:col-span-2">
               <img class="rounded-3xl size-full" src="assets/img5.png" alt="">
+            </div>
+            <!-- card-3 -->
+            <div class="border-2 rounded-3xl md:block lg:hidden hidden p-6 items-center col-span-1 lg:col-span-2">
+              <img class="rounded-3xl size-full" src="assets/img3.png" alt="">
             </div>
           </div>
         </section>
