recheck for nav banner and liveable space section done

--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 
 </head>
 <body class="manrope-font">
-      <header class="container w-5/6 mx-auto back-color" >
+      <header class="container bg-white w-5/6 mx-auto back-color" >
           <!-- navigation bar  -->
            <nav>
             <div class="navbar bg-base-100 my-5 md:my-8">
                 <div class="navbar-start">
                   <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i>
-                  <a class="btn btn-ghost font-bold text-3xl">Rinterio</a>
+                  <a class="btn btn-ghost hover:bg-lime-400 font-bold text-3xl">Rinterio</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1 text-gray-500 text-md">
                     <li class="hover:font-bold"><a>Home</a></li>
                     <li class="hover:font-bold"><a>Services</a></li>
-                    <li class="hover:font-bold"><a>Portfolio</a></li>
+                    <li class="hover:font-bold"><a href="#portfolio">Portfolio</a></li>
                     <li class="hover:font-bold"><a>Blogs</a></li>
                     <li class="hover:font-bold"><a>ContactUS</a></li>
                   </ul>
@@ -77,9 +77,9 @@
                       <i class="fa-solid fa-cart-arrow-down  border rounded-full text-center p-2 " style="color: #020203;"></i>
                     </div>
                    </div>
-                  <a class="btn bg-btn-color font-bold hidden md:block py-3">Book Consult <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #000000; --fa-rotate-angle: 45deg;"></i></a>
+                  <a class="btn bg-btn-color font-bold hover:bg-lime-400 hidden md:block py-3">Book Consult <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #000000; --fa-rotate-angle: 45deg;"></i></a>
                   <div class="dropdown dropdown-left">
-                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                    <div tabindex="0" role="button" class="btn btn-ghost hover:bg-lime-400 lg:hidden">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         class="h-8 w-8"
@@ -95,12 +95,12 @@
                     </div>
                     <ul
                       tabindex="0"
-                      class="menu menu-sm  dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                      <li><a>Home</a></li>
-                    <li><a>Services</a></li>
-                    <li><a>Portfolio</a></li>
-                    <li><a>Blogs</a></li>
-                    <li><a>ContactUS</a></li>
+                      class="menu menu-sm  dropdown-content bg-lime-400 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                      <li class="hover:font-extrabold hover:text-green-950"><a>Home</a></li>
+                    <li class="hover:font-extrabold hover:text-green-950"><a>Services</a></li>
+                    <li class="hover:font-extrabold hover:text-green-950"><a href="#portfolio">Portfolio</a></li>
+                    <li class="hover:font-extrabold hover:text-green-950"><a>Blogs</a></li>
+                    <li class="hover:font-extrabold hover:text-green-950"><a>ContactUS</a></li>
                     </ul>
                   </div>
                 </div>
@@ -119,7 +119,7 @@
                     The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
                   </p>
                   </div>
-                  <button class="btn btn-primary bg-[#b9fc6ddc] border-none rounded-full text-black w-full md:w-auto px-5">View Details <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #84e01a; --fa-rotate-angle: 45deg;"></i></button>
+                  <button class="btn btn-primary bg-[#b9fc6ddc] border-none rounded-full text-black w-full md:w-auto px-5 hover:bg-lime-400">View Details <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-2xl" style="color: #84e01a; --fa-rotate-angle: 45deg;"></i></button>
                 </div>
               </div>
             </div>
@@ -129,25 +129,25 @@
 
       <!-- section design thoughtful start here -->
        <section class="bg-base-200 ">
-        <div class=" container md:w-5/6 mx-auto hero bg-base-200 py-24">
+        <div class=" container md:w-5/6 mx-auto hero bg-base-200 py-20">
           <div class="hero-content grid grid-cols-1 lg:grid-cols-2 relative w-full mx-auto">  
-          <img class="absolute -top-8 hidden lg:block" src="assets/Vector.png" alt="">
+          <img class="absolute -top-8 -left-8 hidden lg:block" src="assets/Vector.png" alt="">
             <div class="space-y-6">
               <div class="space-y-6 text-center lg:text-start">
-                <button class=" btn btn-neutral bg-white border-none rounded-full text-gray-800 font-semibold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>About Us</button>
+                <button class=" btn btn-neutral hover:bg-lime-200 bg-white border-none rounded-full text-gray-800 font-semibold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>About Us</button>
               <h3 class="title-color font-extrabold text-3xl md:text-5xl">We design thoughtful, liveable spaces</h3>
               <p class="text-[#494949] font-bold text-md">The barn house captivates with its blend of rustic charm and 
                 modern sophistication, featuring weathered wood, sleek metal accents.</p>
               </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-1 gap-6">
-                  <div class="flex p-6 lg:p-8 space-x-2 lg:space-x-6 bg-white border-none rounded-2xl">
+                  <div class="flex p-6 lg:p-8 space-x-2 lg:space-x-6 hover:bg-lime-200 bg-white border-none rounded-2xl">
                   <img src="assets/commercial.png" alt="">
                   <div class="text-[#494949]">
                     <h6 class="text-[#494949] font-bold text-xl">Commercial</h6>
                     <p class="text-sm mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
                   </div>
                 </div>
-                <div class="flex p-6 lg:p-8 space-x-2 lg:space-x-6 bg-white border-none rounded-2xl">
+                <div class="flex p-6 lg:p-8 space-x-2 lg:space-x-6 hover:bg-lime-200 bg-white border-none rounded-2xl">
                   <img  src="assets/residential.png" alt="">
                   <div class="text-[#494949]">
                     <h6 class="text-[#494949] font-bold text-xl">Residential</h6>
@@ -155,8 +155,8 @@
                   </div>
                 </div></div>
             </div>
-            <div class="flex justify-center items-center">
-              <img class=" md: w-full" src="assets/Rectangle.png" alt="">
+            <div class="flex justify-center items-center mt-4">
+              <img class=" md:w-full" src="assets/Rectangle.png" alt="">
             </div>
           </div>
         </div>
@@ -255,7 +255,7 @@
 
          <!-- latest portfolio section start from here  -->
 
-         <section class="container mx-auto py-20 bg-section-color lg:bg-transparent">
+         <section id="portfolio" class="container mx-auto py-20 bg-section-color lg:bg-transparent">
           <div class="w-4/5 lg:w-1/2 mx-auto pt-12 text-center space-y-4">
             <button class=" btn btn-neutral bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Explore our Latest works</button>
             <h3 class="text-4xl font-extrabold text-title-color ">Our Latest Portfolio</h3>
