--- a/index.html
+++ b/index.html
@@ -156,18 +156,18 @@
                 </div></div>
             </div>
             <div class="flex justify-center items-center mt-4">
-              <img class=" md:w-full" src="assets/Rectangle.png" alt="">
+              <img class=" md:size-full" src="assets/Rectangle.png" alt="">
             </div>
           </div>
         </div>
        </section>
 
        <!-- small card section start  here -->
-        <section class="lg:py-8 bg-section-color">
-           <div class="lg:w-4/5 w-4/5 md:w-11/12 container bg-white mx-auto py-6 border-none rounded-3xl grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+        <section class="lg:py-6 bg-section-color">
+           <div class="lg:w-4/5 w-5/6 md:w-11/12 container bg-white mx-auto py-6 border-none rounded-3xl grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
             
             <!-- card-1 -->
-            <div class="card w-auto mx-auto p-6 rounded-none">
+            <div class="card w-auto mx-auto p-6 rounded-none hover:bg-lime-50">
               <figure class=" ">
                 <img src="assets/message-regular.svg" alt="">
               </figure>
@@ -178,7 +178,7 @@
             </div>
 
             <!-- card-2 -->
-            <div class="card w-auto mx-auto p-6 rounded-none">
+            <div class="card w-auto mx-auto p-6 rounded-none hover:bg-lime-50">
               <figure class=" ">
                 <img src="assets/building-user-solid.svg" alt="">
               </figure>
@@ -189,7 +189,7 @@
             </div>
 
             <!-- card-3 -->
-            <div class="card w-auto mx-auto p-6 rounded-none">
+            <div class="card w-auto mx-auto p-6 rounded-none hover:bg-lime-50">
               <figure class=" ">
                 <img src="assets/people-group-solid.svg" alt="">
               </figure>
@@ -199,8 +199,8 @@
               </div>
             </div>
 
-            <!-- card-1 -->
-            <div class="card w-auto mx-auto p-6 rounded-none">
+            <!-- card-4 -->
+            <div class="card w-auto mx-auto p-6 rounded-none hover:bg-lime-50">
               <figure class=" ">
                 <img src="assets/user-large-solid.svg" alt="">
               </figure>
