--- a/index.html
+++ b/index.html
@@ -217,35 +217,35 @@
          <section class=" mx-auto lg:py-8 bg-section-color">
           <!-- workpress section -->
             <div class=" container w-4/5 lg:w-1/2 mx-auto  pt-12 text-center space-y-4">
-              <button class=" btn btn-neutral bg-white border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>How we works</button>
-              <h3 class="text-4xl font-extrabold text-title-color ">Our Works Process</h3>
+              <button class=" btn btn-neutral hover:bg-lime-300 bg-white border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>How we works</button>
+              <h3 class="md:text-4xl text-2xl font-extrabold text-title-color ">Our Works Process</h3>
               <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
-            <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-4/5 pt-6"> 
+            <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 w-5/6 lg:w-4/5 pt-6"> 
               
               <!-- card-1 -->
-               <div class="bg-box-1-color p-6 border-none rounded-2xl space-y-1 py-14">
+               <div class="bg-box-1-color p-6 border-none rounded-2xl space-y-1 py-12">
                 <img src="assets/concept.png" alt="">
                 <h5 class="text-2xl font-bold">Concept</h5>
                 <p class="text-lg opacity-95 font-bold text-paragraph-color">The barn house captivates with its blend of rustic charm and modern.</p>
                </div>
 
               <!-- card-2-->
-               <div class="bg-box-2-color p-6 border-none rounded-2xl space-y-1 py-14">
+               <div class="bg-box-2-color p-6 border-none rounded-2xl space-y-1 py-12 ">
                 <img src="assets/flow-chart.png" alt="">
                 <h5 class="text-2xl font-bold">Design Process</h5>
                 <p class="text-lg opacity-95 font-bold text-paragraph-color">The barn house captivates with its blend of rustic charm and modern.</p>
                </div>
 
               <!-- card-3 -->
-               <div class="bg-box-3-color p-6 border-none rounded-2xl space-y-1 py-14">
+               <div class="bg-box-3-color p-6 border-none rounded-2xl space-y-1 py-12">
                 <img src="assets/vision.png" alt="">
                 <h5 class="text-2xl font-bold">Supervision</h5>
                 <p class="text-lg opacity-95 font-bold text-paragraph-color">The barn house captivates with its blend of rustic charm and modern.</p>
                </div>
 
               <!-- card-4 -->
-               <div class="bg-box-4-color p-6 border-none rounded-2xl space-y-1 py-14">
+               <div class="bg-box-4-color p-6 border-none rounded-2xl space-y-1 py-12">
                 <img src="assets/budget-planning.png" alt="">
                 <h5 class="text-2xl font-bold">Budget Planning</h5>
                 <p class="text-lg opacity-95 font-bold text-paragraph-color">The barn house captivates with its blend of rustic charm and modern.</p>
@@ -256,19 +256,19 @@
          <!-- latest portfolio section start from here  -->
 
          <section id="portfolio" class="container mx-auto py-20 bg-section-color lg:bg-transparent">
-          <div class="w-4/5 lg:w-1/2 mx-auto pt-12 text-center space-y-4">
-            <button class=" btn btn-neutral bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Explore our Latest works</button>
-            <h3 class="text-4xl font-extrabold text-title-color ">Our Latest Portfolio</h3>
+          <div class="w-4/5 lg:w-1/2 mx-auto text-center space-y-4">
+            <button class=" btn btn-neutral hover:bg-lime-500 bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Explore our Latest works</button>
+            <h3 class=" text-2xl md:text-4xl font-extrabold text-title-color ">Our Latest Portfolio</h3>
             <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
           </div>
 
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-10 md:grid-rows-2 gap-8 mt-8 w-5/6 mx-auto">
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-10 md:grid-rows-2 gap-8 mt-8 w-11/12 mx-auto">
             <!-- card-1 -->
             <div class="border-2 rounded-3xl p-6 md:col-span-2 lg:col-span-7 flex md:flex-row flex-col space-x-6 items-center lg:bg-transparent bg-white">
                <img class="rounded-3xl" src="assets/img1.png" alt="">
                <div class="">
                 <h5 class="text-2xl text-paragraph-color font-extrabold mt-4 md:mt-0  lg:mb-6 mb-4">Commercial</h5>
-                <p class="text-lg opacity-95 font-bold text-paragraph-color mb-4 lg:mb-6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                <p class="text-lg opacity-95 font-bold text-paragraph-color mb-4 lg:mb-4">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
                 <span class="font-extrabold text-lg text-title-color">View Details  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #8de725; --fa-rotate-angle: 45deg;"></i></span>
               </div>
             </div>
@@ -284,8 +284,8 @@
             <div class=" border-2 col-span-1 md:col-span-2 lg:col-span-6 flex md:flex-row flex-col space-x-6 items-center rounded-3xl p-6 lg:bg-transparent bg-white">
               <img class="rounded-3xl" src="assets/img4.png" alt="">
               <div class="">
-               <h5 class="text-2xl text-paragraph-color font-extrabold mt-4 md:mt-0 lg:mb-6 mb-4">Commercial</h5>
-               <p class="text-lg opacity-95 font-bold text-paragraph-color mb-4 lg:mb-6">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+               <h5 class="text-2xl text-paragraph-color font-extrabold mt-4 md:mt-0 lg:mb-4 mb-4">Commercial</h5>
+               <p class="text-lg opacity-95 font-bold text-paragraph-color mb-4 lg:mb-4">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
                <span class="font-extrabold text-lg text-title-color">View Details  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #8de725; --fa-rotate-angle: 45deg;"></i></span> 
             </div>
           </div>
@@ -293,9 +293,9 @@
             <div class="border-2 rounded-3xl p-6 items-center col-span-1 lg:col-span-2 lg:bg-transparent bg-white">
               <img class="rounded-3xl size-full" src="assets/img5.png" alt="">
             </div>
-            <!-- card-3 -->
-            <div class="border-2 rounded-3xl md:block lg:hidden hidden p-6 items-center col-span-1 lg:col-span-2 lg:bg-transparent bg-white">
-              <img class="rounded-3xl size-full" src="assets/img3.png" alt="">
+            <!-- card-6 -->
+            <div class="border-2 rounded-3xl md:block lg:hidden p-6 items-center col-span-1 lg:col-span-2 lg:bg-transparent bg-white">
+              <img class="rounded-3xl size-full" src="assets/portfoli-1.jpg" alt="">
             </div>
           </div>
         </section>
