--- a/index.html
+++ b/index.html
@@ -303,15 +303,15 @@
 
 
          <!-- article and news section start here  -->
-          <section class="   bg-section-color py-20">
-            <div class="container w-4/5 lg:w-1/2 mx-auto  text-center space-y-4 ">
-              <button class=" btn btn-neutral bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Rinterio News</button>
+          <section class="   bg-section-color py-6 lg:py-20">
+            <div class="container w-4/5 lg:w-2/6 mx-auto  text-center space-y-4 ">
+              <button class=" btn btn-neutral hover:bg-lime-500  bg-[#ABEF5F] bg-opacity-40 px-6 border-none rounded-full text-gray-800 font-bold"><i class="fa-solid fa-arrow-right" style="color: #413e3e;"></i>Rinterio News</button>
               <h3 class="text-4xl font-extrabold text-title-color ">Read Our Articles and News</h3>
               <p class="paragraph-color text-sm font-semibold opacity-90">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
 
             <!-- box -->
-             <div class="container  w-11/12 lg:w-5/6 mx-auto grid grid-cols-1 lg:grid-cols-3 gap-8 lg:gap-12">
+             <div class="container  w-11/12 lg:w-5/6 mx-auto grid grid-cols-1 lg:grid-cols-3 gap-8 lg:gap-12 mt-8">
               
                <!-- box-1 -->
                <div class="card bg-base-100 shadow-xl grid md:grid-cols-2 lg:grid-cols-1">
@@ -328,7 +328,7 @@
                   </div>
                   <h3 class="font-bold text-paragraph-color text-xl">How to choose the furniture right  of your home.</h3>
                   <p class=" text-paragraph-color opacity-95 text-md">The barn house captivates with its blend of rustic charm and modern. </p>
-                  <span class="font-extrabold text-xl text-title-color">Read More  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i></span>
+                  <span class="font-extrabold text-xl text-title-color hover:text-lime-500">Read More  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i></span>
                 </div>
               </div>
 
@@ -347,7 +347,7 @@
                   </div>
                   <h3 class="font-bold text-paragraph-color text-xl">How to choose the furniture right  of your home.</h3>
                   <p class=" text-paragraph-color opacity-95 text-md">The barn house captivates with its blend of rustic charm and modern. </p>
-                  <span class="font-extrabold text-xl text-title-color">Read More  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i></span>
+                  <span class="font-extrabold text-xl text-title-color hover:text-lime-500">Read More  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i></span>
                 </div>
               </div>
 
@@ -366,7 +366,7 @@
                   </div>
                   <h3 class="font-bold text-paragraph-color text-xl">How to choose the furniture right  of your home.</h3>
                   <p class=" text-paragraph-color opacity-95 text-md">The barn house captivates with its blend of rustic charm and modern. </p>
-                  <span class="font-extrabold text-xl text-title-color">Read More  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i></span>
+                  <span class="font-extrabold text-xl text-title-color hover:text-lime-500">Read More  <i class="fa-solid fa-circle-arrow-up fa-rotate-by fa-xl" style="color: #abef5f; --fa-rotate-angle: 45deg;"></i></span>
                 </div>
               </div>
              </div>
